@@ -3,6 +3,9 @@
 	* Xi/exevents.c:
 	Coverity #323, #445, #446, #447: Fix potential NULL dereferences.
 
+	* xkb/ddxList.c:
+	Coverity #169: Fix potential fgets() into NULL (?!?).
+
 2006-04-07  Aaron Plattner  <aplattner@nvidia.com>
 
 	* hw/xfree86/common/xf86Module.h:
